# satellite-platform

./: .gitignore  README.md  fix-codex-profile-error.ps1  pyproject.toml  打开平台界面.bat
docs/: ARCHITECTURE.md  EXPERIMENT_LIBRARY.md  NEWCOMER_GUIDE.md  PLATFORM_PLAN.md  PLATFORM_UI_GUIDE.md  PROJECT_GUIDE.md  REFERENCES.md  ROADMAP.md
examples/: academic_reaction_wheel_study.py  cubesat_reaction_wheels_pd.py  cubesat_wheel_failure.py  ladrc_closed_loop.py  mekf_rls_identification.py  open_loop.py  pd_closed_loop.py  tune_pd.py
scenarios/: controller_benchmark_showcase.json  cubesat_rw_disturbance_breakdown.json  cubesat_rw_disturbance_capability_tradeoff.json  cubesat_rw_earth_transition_curated.json  cubesat_rw_earth_transition_wheel_capability.json  cubesat_rw_fault.json  cubesat_rw_fault_experiment.json  cubesat_rw_fault_experiment_2.json  cubesat_rw_fault_experiment_3.json  cubesat_rw_fault_gain_tradeoff.json  cubesat_rw_fault_mc_robustness.json  cubesat_rw_fault_mc_robustness_2.json  cubesat_rw_fault_seed_mc.json  cubesat_rw_fault_sun_transition.json  cubesat_rw_fault_sun_transition_2.json  cubesat_rw_fault_sun_transition_3.json  cubesat_rw_fault_sun_transition_3_2.json  cubesat_rw_fault_sun_transition_3_3.json  cubesat_rw_momentum_management.json  cubesat_rw_momentum_management_sweep.json  cubesat_rw_orbital_baseline.json  cubesat_rw_sun_transition_curated.json  cubesat_rw_wheel_capability.json  disturbance_breakdown_showcase.json  earth_transition_showcase.json  fault_wheel_showcase.json  orbital_environment_showcase.json  quick_controller_benchmark.json  quick_controller_benchmark_compare.json  quick_controller_benchmark_orbital.json  quick_controller_benchmark_orbital_compare.json  quick_environment_compare.json  quick_pd_acceptance_gate.json  quick_pd_acceptance_gate_2.json  quick_pd_damping_sweep.json  quick_pd_experiment.json  quick_pd_gain_sweep.json  quick_pd_seed_mc.json  quick_pd_showcase.json  quick_pd_showcase_2.json  (+5 more)
scripts/: open_platform_ui.ps1  (+2 more)
(+55 files in other folders)
